[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Scenery/Column/Column.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Scenery/floor_tile.png" type="Texture" id=3]
[ext_resource path="res://World/Scenery/wall_tileset.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/World.gd" type="Script" id=7]
[ext_resource path="res://World/Roboto-Black.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/Nosifer/Nosifer-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://fonts/Metal_Mania/MetalMania-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/Astloch/Astloch-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://World/Interactive/Button/Button.tscn" type="PackedScene" id=12]
[ext_resource path="res://World/Interactive/Door/Door.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/Scenery/Lectern/Lectern.tscn" type="PackedScene" id=14]
[ext_resource path="res://World/Interactive/Door/Door.gd" type="Script" id=15]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "wall_tileset.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 10, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 10, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 10
outline_color = Color( 0.501961, 0.0705882, 0.0705882, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 3
font_data = ExtResource( 8 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )
Bat = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 88 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1500, 1500 )

[node name="WallTileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1114126, 0, 0, -1114125, 0, 1, -1114124, 0, 1, -1114123, 0, 1, -1114122, 0, 1, -1114121, 0, 1, -1114120, 0, 1, -1114119, 0, 1, -1114118, 0, 1, -1114117, 0, 1, -1114116, 0, 1, -1114115, 0, 1, -1114114, 0, 1, -1114113, 0, 1, -1179648, 0, 1, -1179647, 0, 2, -1048590, 0, 65536, -1048589, 0, 65537, -1048588, 0, 65537, -1048587, 0, 65537, -1048586, 0, 65537, -1048585, 0, 65537, -1048584, 0, 65537, -1048583, 0, 65537, -1048582, 0, 65537, -1048581, 0, 65537, -1048580, 0, 65537, -1048579, 0, 65537, -1048578, 0, 65537, -1048577, 0, 65537, -1114112, 0, 65537, -1114111, 0, 65538, -983054, 0, 65536, -983053, 0, 65537, -983052, 0, 65541, -983051, 0, 131073, -983050, 0, 131073, -983049, 0, 131073, -983048, 0, 131073, -983047, 0, 131073, -983046, 0, 131073, -983045, 0, 131073, -983044, 0, 131073, -983043, 0, 131073, -983042, 0, 131073, -983041, 0, 65542, -1048576, 0, 65537, -1048575, 0, 65538, -917518, 0, 65536, -917517, 0, 65537, -917516, 0, 65538, -917505, 0, 65536, -983040, 0, 65537, -983039, 0, 65538, -851982, 0, 65536, -851981, 0, 65537, -851980, 0, 65538, -851969, 0, 65536, -917504, 0, 65537, -917503, 0, 65538, -786446, 0, 65536, -786445, 0, 65537, -786444, 0, 65538, -786433, 0, 65536, -851968, 0, 65537, -851967, 0, 65538, -720910, 0, 65536, -720909, 0, 65537, -720908, 0, 65538, -720897, 0, 65536, -786432, 0, 65537, -786431, 0, 65538, -655374, 0, 65536, -655373, 0, 65537, -655372, 0, 65538, -655361, 0, 65536, -720896, 0, 65537, -720895, 0, 65538, -589838, 0, 65536, -589837, 0, 65537, -589836, 0, 131077, -589835, 0, 1, -589834, 0, 1, -589833, 0, 2, -589830, 0, 0, -589829, 0, 1, -589828, 0, 1, -589827, 0, 1, -589826, 0, 1, -589825, 0, 131078, -655360, 0, 65537, -655359, 0, 65538, -524302, 0, 65536, -524301, 0, 65537, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 0, 65538, -524294, 0, 65536, -524293, 0, 65537, -524292, 0, 65537, -524291, 0, 65537, -524290, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -589823, 0, 65538, -458766, 0, 131072, -458765, 0, 65542, -458764, 0, 65537, -458763, 0, 65541, -458762, 0, 131073, -458761, 0, 131074, -458758, 0, 131072, -458757, 0, 131073, -458756, 0, 65542, -458755, 0, 65537, -458754, 0, 65537, -458753, 0, 65541, -524288, 0, 131073, -524287, 0, 131074, -393229, 0, 65536, -393228, 0, 65537, -393227, 0, 65538, -393220, 0, 65536, -393219, 0, 65537, -393218, 0, 65537, -393217, 0, 65538, -327693, 0, 65536, -327692, 0, 65537, -327691, 0, 65538, -327684, 0, 65536, -327683, 0, 65537, -327682, 0, 65537, -327681, 0, 65538, -262157, 0, 65536, -262156, 0, 65537, -262155, 0, 65538, -262148, 0, 65536, -262147, 0, 65537, -262146, 0, 65537, -262145, 0, 65538, -196621, 0, 65536, -196620, 0, 65537, -196619, 0, 65538, -196612, 0, 65536, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 65538, -131085, 0, 65536, -131084, 0, 65537, -131083, 0, 65538, -131076, 0, 65536, -131075, 0, 65537, -131074, 0, 65537, -131073, 0, 131077, -196608, 0, 1, -196607, 0, 1, -196606, 0, 1, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -196602, 0, 1, -196601, 0, 1, -196600, 0, 1, -196599, 0, 1, -196598, 0, 1, -196597, 0, 1, -196596, 0, 1, -196595, 0, 2, -65549, 0, 65536, -65548, 0, 65537, -65547, 0, 65538, -65540, 0, 65536, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -131059, 0, 65538, -13, 0, 65536, -12, 0, 65537, -11, 0, 65538, -4, 0, 65536, -3, 0, 65537, -2, 0, 65537, -1, 0, 65541, -65536, 0, 131073, -65535, 0, 131073, -65534, 0, 131073, -65533, 0, 131073, -65532, 0, 131073, -65531, 0, 131073, -65530, 0, 131073, -65529, 0, 131073, -65528, 0, 131073, -65527, 0, 131073, -65526, 0, 65542, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65538, 65523, 0, 65536, 65524, 0, 65537, 65525, 0, 65538, 65532, 0, 65536, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65538, 10, 0, 65536, 11, 0, 65537, 12, 0, 65537, 13, 0, 65538, 131059, 0, 65536, 131060, 0, 65537, 131061, 0, 65538, 131068, 0, 131072, 131069, 0, 131073, 131070, 0, 131073, 131071, 0, 131074, 65546, 0, 65536, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65538, 196595, 0, 65536, 196596, 0, 65537, 196597, 0, 65538, 131082, 0, 65536, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65538, 262131, 0, 65536, 262132, 0, 65537, 262133, 0, 65538, 262140, 0, 0, 262141, 0, 1, 262142, 0, 1, 262143, 0, 2, 196618, 0, 65536, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65538, 327667, 0, 65536, 327668, 0, 65537, 327669, 0, 65538, 327676, 0, 65536, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65538, 262154, 0, 65536, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65538, 393203, 0, 65536, 393204, 0, 65537, 393205, 0, 65538, 393212, 0, 65536, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65538, 327690, 0, 65536, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65538, 458739, 0, 65536, 458740, 0, 65537, 458741, 0, 131077, 458742, 0, 1, 458743, 0, 1, 458744, 0, 1, 458745, 0, 1, 458746, 0, 1, 458747, 0, 1, 458748, 0, 131078, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 131077, 393216, 0, 1, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 1, 393221, 0, 1, 393222, 0, 1, 393223, 0, 1, 393224, 0, 1, 393225, 0, 1, 393226, 0, 131078, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65538, 524275, 0, 65536, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65538, 589811, 0, 131072, 589812, 0, 131073, 589813, 0, 131073, 589814, 0, 131073, 589815, 0, 131073, 589816, 0, 131073, 589817, 0, 131073, 589818, 0, 131073, 589819, 0, 131073, 589820, 0, 131073, 589821, 0, 131073, 589822, 0, 131073, 589823, 0, 131073, 524288, 0, 131073, 524289, 0, 131073, 524290, 0, 131073, 524291, 0, 131073, 524292, 0, 131073, 524293, 0, 131073, 524294, 0, 131073, 524295, 0, 131073, 524296, 0, 131073, 524297, 0, 131073, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131074 )

[node name="YSort" type="YSort" parent="."]

[node name="Button" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 161.052, 86.8427 )

[node name="Lectern" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 160.966, 6.53703 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 216, 80 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Columns" type="YSort" parent="YSort"]

[node name="Column1" parent="YSort/Columns" instance=ExtResource( 2 )]
position = Vector2( 80, 48 )

[node name="Column2" parent="YSort/Columns" instance=ExtResource( 2 )]
position = Vector2( 240, 48 )

[node name="Column3" parent="YSort/Columns" instance=ExtResource( 2 )]
position = Vector2( 80, 144 )

[node name="Column4" parent="YSort/Columns" instance=ExtResource( 2 )]
position = Vector2( 240, 144 )

[node name="Door" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( -224, -263.75 )

[node name="Door2" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( -30.6153, 72.9165 )
rotation = -1.5708
scale = Vector2( 0.719999, 1 )
script = ExtResource( 15 )

[node name="Enemies" type="YSort" parent="YSort"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 216, 80 )
current = true
zoom = Vector2( 0.75, 0.75 )
smoothing_enabled = true

[node name="Control" type="Control" parent="Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Label" parent="Camera2D/Control"]
visible = false
margin_left = -71.0
margin_top = -53.0
margin_right = 69.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "
Objective Completed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loss" type="Label" parent="Camera2D/Control"]
visible = false
margin_left = -118.013
margin_top = -23.6337
margin_right = 116.987
margin_bottom = 66.3663
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.258824, 0.258824, 1 )
text = "You Died

Care to play again?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Camera2D/Control"]
visible = false
margin_left = -56.4928
margin_top = -8.5665
margin_right = 55.5072
margin_bottom = 11.4335
custom_fonts/font = SubResource( 5 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 90.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 19.0
margin_right = 35.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
text = "r : reset
q : quit
arrows : move
space : attack
GET THOSE BATS!!!!!!!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="YSort/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="YSort/Button" to="YSort/Door2" method="_on_Button_pressed"]
[connection signal="tree_exited" from="YSort/Player" to="." method="_on_Player_tree_exited"]
[connection signal="pressed" from="Camera2D/Control/Menu" to="." method="_on_Menu_pressed"]
